<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/Exterior"
        tools:context="com.example.chacon.joan.practica4.demografia">

        <TextView
            android:text="@string/demografia"
            style="@style/Titulo"/>

        <ImageView
            android:layout_width="330dp"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:src="@drawable/demografia"/>


        <TextView
            android:text="@string/demografia2"
            style="@style/TextViewDemo"/>

        <TextView
            android:text="@string/demografia1"
            style="@style/TextViewDemo"/>

    </LinearLayout>

</ScrollView>